--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ socialShareButtons.forEach(function (button) {
 </div>
 </section>--->
 	  <header id="header" id="home">
-				<div class="header-top">
+				<div class="header fixed-top">
 		  			<div class="container">
 				  		<div class="row justify-content-end">
 				  			<div class="col-lg-8 col-sm-4 col-8 header-top-right no-padding">
